hotfix | Fix layout issue in collect section and improve button hover effects

--- a/src/app/select-section/select-section.component.scss
+++ b/src/app/select-section/select-section.component.scss
@@ -61,7 +61,12 @@ div {
             grid-area: d;
         }
 
-        &:hover {
+        &:active {
+            background-color: $color-text;
+            color: $color-background;
+        }
+
+        @media (hover: hover) {
             background-color: $color-text;
             color: $color-background;
         }
